discussion/kv_engine/155614/155614_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46844: Foward declare Manifest::container iterators

As the manifest includes the iterators of Manifest::container in the
public interface of the class we need to forward declare the iterator
types if we want to be able to forward declare the F14NodeMap (to avoid
including it in vbucket_manifest.h and the 20+ files including that.

Change-Id: I478ccf953c9a6c5ea24f60b3fd5f6d04ad74a6ff

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-11 12:30:57.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 13:12:55.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36760/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36760/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9790/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.h:39:1: warning: nested namespaces can be concatenated [modernize-concat-nested-namespaces]
namespace folly {
^~~~~~~~~~~~~~~~~
namespace folly::f14::detail

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9790/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9790/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8385/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31419/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19376/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11365/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11514/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11791/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-11 14:31:12.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 14:43:41.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9790/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.h:39:1: warning: nested namespaces can be concatenated [modernize-concat-nested-namespaces]
namespace folly {
^~~~~~~~~~~~~~~~~
namespace folly::f14::detail

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9790/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9790/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8385/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31419/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19376/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11365/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11514/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11791/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36771/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 16:03:44.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9812/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.h:39:1: warning: nested namespaces can be concatenated [modernize-concat-nested-namespaces]
namespace folly {
^~~~~~~~~~~~~~~~~
namespace folly::f14::detail

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9812/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9812/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8385/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36771/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31419/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19376/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11365/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11514/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11791/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 16:30:16.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9817/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.h:39:1: warning: nested namespaces can be concatenated [modernize-concat-nested-namespaces]
namespace folly {
^~~~~~~~~~~~~~~~~
namespace folly::f14::detail

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9817/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9817/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8385/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36771/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31419/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19376/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11365/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11514/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11791/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-14 12:33:56.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
